--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,12 @@ header {
   color: white;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
+.saveBtn i {
+  font-size: 1.5rem;
+}
+
+.saveBtn:hover {
+  background-color: #329F5B;
   transition: all 0.3s ease-in-out;
 }
 
